2006-07-21  Phil Muldoon  <pmuldoon@redhat.com>

	* sessions/ChildPIDWindow.java (checkSession): Set treeview sort components.
	(setListeners): Setup columns to be sortable.
	
	* SessionManagerGui.java (getManagerControls): Added a run()
	call make dialog modal, and stop stack

2006-07-21  Mike Cvet  <mcvet@redhat.com>

	* glade/childpidwindow.glade: changed the closeButton to a 
	launchButton.
	* sessions/ChildPIDWindow.java (setListeners): Updated accordingly.
	(.cellRendererToggleEvent): Fixed a parent checkbox selection bug.

2006-07-21  Rick Moseley  <rmoseley@redhat.com>

	* glade/procpop.glade: Added more tooltips, changed window labels.
	* glade/frysk_source_prefs.glade: Added new window label.

2006-07-20  Mike Cvet  <mcvet@redhat.com>

	* sessions/ChildPIDWindow.java: Added.
	* glade/childpidwindow.glade: Added. 
	* SessionManagerGui.java (.buttonEvent): Now calls the
	ChildPIDWindow, which does the work for calling the MainWindow.
	(setChildPIDGlade): Added - support for ChildPIDWindow glade.
	* Gui.java (Gui): Added new glade file and support for
	the ChildPIDWindow.

2006-07-20  Sami Wagiaalla  <swagiaal@redhat.com>

	* SessionManagerGui.java: Removed getNumberSuffix.

2006-07-20  Rick Moseley  <rmoseley@redhat.com>

	* glade/procpop.glade: Added tooltips.

2006-07-20  Tim Moore  <timmore@redhat.com>

	* memory/MemoryWindow.java (setTask): "Handle" TaskException.
	* register/RegisterWindow.java (setTask): ditto.
	* srcwin/SourceWindowFactory.java (finishSourceWin): ditto.

2006-07-20 Phil Muldoon  <pmuldoon@redhat.com>

	* glade/frysk_create_session.glade: Added tooltips.

2006-07-19  Phil Muldoon  <pmuldoon@redhat.com>

	* druid/CreateFryskSessionDruid.java (setNewSessionMode): 
	Call unFilterData. Stop eating processes.
	(setEditSessionMode): Ditto.
	(unFilterData): New.
	(getProcessObserverControls): Add Custom Observer controls
	for button.
	* glade/frysk_create_session.glade: Added Custom Observers
	Button to druid.

	* test/TestGlade.java: New.
